--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-API_KEY="d41eaf42f9304394a5a2143e787e40ab"
+API_KEY="28fcd7cc4ca447d4ba11db91d8982618"
 # 28fcd7cc4ca447d4ba11db91d8982618 -- Octi
+# 28fcd7cc4ca447d4ba11db91d8982618 -- Nish
